--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -37,7 +37,7 @@
         </div>
     </div>
     <script>
-        const apiKey = "611712862dc6598e95d03cc1aefa0c24";
+        const apiKey = "Generate Your Own Key"; //generate your own API key from Opem Weather API website
         const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
         
         const searchBox = document.querySelector(".search input");
